[package]
name = "forward"
version = "0.1.0"
description = "A forwarding impl generating macro."
repository = "https://github.com/jsirois/forward-rs"
authors = ["John Sirois <john.sirois@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.14"

